force-app/main/default/objects/Location__c/fields/Ascii_Name__c.field-meta.xml
<CustomField>
    <fullName>Ascii_Name__c</fullName>
    <label>Ascii Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>