force-app/main/default/objects/Location__c/fields/Automatization_of_Sales_Regionalization__c.field-meta.xml
<CustomField>
    <fullName>Automatization_of_Sales_Regionalization__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox will enable the location to the Automatization of Sales Regionalization process</description>
    <label>Automatization of Sales Regionalization</label>
    <type>Checkbox</type>
</CustomField>