force-app/main/default/objects/Location__c/fields/County_Fips__c.field-meta.xml
<CustomField>
    <fullName>County_Fips__c</fullName>
    <label>County Fips</label>
    <length>10</length>
    <type>Text</type>
</CustomField>