force-app/main/default/objects/Location__c/fields/County_texto__c.field-meta.xml
<CustomField>
    <fullName>County_texto__c</fullName>
    <label>County texto</label>
    <length>80</length>
    <type>Text</type>
</CustomField>