force-app/main/default/objects/Location__c/fields/Location_Region__c.field-meta.xml
<CustomField>
    <fullName>Location_Region__c</fullName>
    <description>Macroregion of the county which this location belogs to. (Formula)</description>
    <formula>County__r.Ag_District__r.Macroregion__r.Short_Name__c</formula>
    <inlineHelpText>Macroregion of the county which this location belogs to. (Formula)</inlineHelpText>
    <label>Location Region</label>
    <type>Text</type>
</CustomField>