force-app/main/default/objects/Location__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region DONT USE</label>
    <length>80</length>
    <type>Text</type>
</CustomField>