force-app/main/default/objects/Location__c/fields/State_Id__c.field-meta.xml
<CustomField>
    <fullName>State_Id__c</fullName>
    <label>State Id</label>
    <length>2</length>
    <type>Text</type>
</CustomField>