force-app/main/default/objects/Location__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>State_Id__c</columns>
    <columns>State_Name__c</columns>
    <columns>Source_Id__c</columns>
    <columns>Zip_Code__c</columns>
    <columns>Population__c</columns>
    <columns>County__c</columns>
    <columns>County_Fips__c</columns>
    <columns>County_texto__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>